add vector and vecxx

--- a/opencv_ahk/opencv_ahk.vcxproj
+++ b/opencv_ahk/opencv_ahk.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="util.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cvobj.cpp" />
