--- a/opencv_ahk/opencv_ahk.vcxproj.filters
+++ b/opencv_ahk/opencv_ahk.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="cvobj.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Vector.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
