add vector classes

--- a/opencv_ahk/opencv_ahk.vcxproj.filters
+++ b/opencv_ahk/opencv_ahk.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="cvobj.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Vector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
