--- a/opencv_ahk/opencv_ahk.vcxproj.filters
+++ b/opencv_ahk/opencv_ahk.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Vector.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TextDraw.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -69,6 +72,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Vector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TextDraw.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
