--- a/opencv_ahk/opencv_ahk.vcxproj
+++ b/opencv_ahk/opencv_ahk.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="cv_mat.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="TextDraw.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
@@ -183,6 +184,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TextDraw.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
